--- a/index.html
+++ b/index.html
@@ -35,27 +35,48 @@
   <body>
     <header>
       <nav
-        class="navbar navbar-expand-lg bg-body-tertiary rounded"
+        class="navbar navbar-expand-lg custom-navbar rounded"
         aria-label="Eleventh navbar example"
       >
         <div class="container-fluid">
           <div class="d-flex align-items-center">
-            <a class="navbar-brand" href="#home">BoostZone</a>
+            <b
+              ><a
+                class="navbar-brand"
+                style="
+                  font-family: Cambria, Cochin, Georgia, Times,
+                    'Times New Roman', serif;
+                  color: white;
+                "
+                href="#home"
+                >BoostZone</a
+              ></b
+            >
           </div>
           <ul class="navbar-nav mb-lg-0 ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home"
+              <a
+                class="nav-link active"
+                style="color: white"
+                aria-current="page"
+                href="#home"
                 >Beranda</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#product">Produk</a>
+              <a class="nav-link active" style="color: white" href="#product"
+                >Produk</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#about">Tentang</a>
+              <a class="nav-link active" style="color: white" href="#about"
+                >Tentang</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#contact">Kontak</a>
+              <a class="nav-link active" style="color: white" href="#contact"
+                >Kontak</a
+              >
             </li>
           </ul>
         </div>
